--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -47,6 +47,12 @@
   padding: 5%;
 }
 
+.thumbnail{
+  height: 50%;
+  width: 80%;
+  border-radius: 20px;
+}
+
 .pageConfig{
   display: flex;
   align-items: center;
