--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,35 +7,6 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 
 .form{
   text-align: center;
@@ -48,16 +19,27 @@
 }
 
 .thumbnail{
-  height: 50%;
-  width: 80%;
-  border-radius: 20px;
+  height: 20vw;
+  width: 20vw;
 }
 
-.pageConfig{
+.pageConfig, .centerCard{
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+}
+
+
+.question{
+  font-weight: bold;
+  margin-right: 5vw;
+}
+
+.tips{
+  font-size: small;
+  color: grey;
+  margin-left: 5vw;
 }
 
 .avatar:link {
