--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -48,6 +48,12 @@
   margin-left: 10vw;
 }
 
+.res {
+  margin: 10vw;
+  font-size: large;
+  color: black
+}
+
 .avatar:link {
   color: #000000;
 } /* 未访问链接*/
