--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -25,6 +25,11 @@
   border-radius: 4px;
 }
 
+#ButtonAdvance{
+  background-color: purple;
+  margin-bottom: 5vh;
+}
+
 .pageConfig, .centerCard{
   display: flex;
   align-items: center;
